# prosediff

./: CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
docs/: diff-format.md
examples/: README.md  rules-new.md  rules-old.md
scripts/: smoke.sh
src/prosediff/: __init__.py  __main__.py  cli.py  engine.py  errors.py  inline.py  matcher.py  model.py  parser.py  render.py  textnorm.py
tests/: conftest.py  test_cli.py  test_engine.py  test_examples.py  test_inline.py  test_matcher.py  test_parser.py  test_render.py  test_textnorm.py
