[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prosediff"
version = "0.1.0"
description = "Section-aware diff for Markdown rule and prompt files: detects moved, renamed, and rewritten sections instead of delete-plus-add noise."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ" }]
keywords = ["diff", "markdown", "prompt", "claude-md", "code-review", "move-detection", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
prosediff = "prosediff.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/prosediff"
Repository = "https://github.com/JaydenCJ/prosediff"
Issues = "https://github.com/JaydenCJ/prosediff/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
